# pidgit

./: .rustfmt.toml  Cargo.toml  LICENSE  readme.md
src/: cmd.rs  diff.rs  errors.rs  index.rs  lib.rs  lockfile.rs  main.rs  object.rs  repo.rs  test_prelude.rs  util.rs
src/cmd/: add.rs  branch.rs  cat_file.rs  check_ref_format.rs  commit.rs  diff.rs  diff_tree.rs  dump_index.rs  dump_tree.rs  hash_object.rs  init.rs  log.rs  ls_files.rs  mod.rs  rev_parse.rs  status.rs
src/diff/: myers.rs
src/object/: blob.rs  commit.rs  tag.rs  tree.rs
src/repo/: grefs.rs  status.rs
src/util/: rev_parse.rs  sha.rs  wrapping_vec.rs
tests/: init.rs
