[package]
name = "pidgit"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2018"

[lib]
name = "pidgit"
path = "src/lib.rs"

[[bin]]
name = "pidgit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.3"
flate2 = "1.0"
hex = "0.4"
sha1 = { version = "0.6", features = [ "std" ] }

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"
predicates = "1.0"
serial_test = "0.4"
