[package]
name = "pidgit"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pidgit"
path = "src/bin/main.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
atty = "0.2"
bit-vec = "0.6"
chrono = "0.4"
clap = "2.3"
flate2 = "1.0"
hex = "0.4"
sha1 = { version = "0.6", features = [ "std" ] }

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"
predicates = "1.0"
serial_test = "0.4"
